--- a/translations/kangyur/translations/046-001_toh95_play_in_full.xml
+++ b/translations/kangyur/translations/046-001_toh95_play_in_full.xml
@@ -31,7 +31,7 @@
                     daughter, and son</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 4.48.24 <date>2024</date>
+                <edition>v 4.48.25 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -222,6 +222,9 @@
                 <change who="#konchog" when="2024-08-08T01:44:56.673Z" type="text-version" status="4.48.24" xml:id="UT22084-046-001-52176">
                     <desc>Few more minor proofing adjustments.</desc>
                 </change>
+                <change who="#konchog" when="2024-08-08T16:37:18.27Z" type="text-version" status="4.48.25" xml:id="UT22084-046-001-52177">
+                    <desc>Couple links added to intro, after consulting with AD.</desc>
+                </change>
             </revisionDesc>
         </fileDesc>
     </teiHeader>
@@ -311,7 +314,7 @@
                         manifested in this world and attained awakening. The sūtra, which is structured in twenty-seven
                         chapters, begins with the Buddha being requested to teach the sūtra by several gods, as well as
                         the thousands of bodhisattvas and hearers in his retinue. The gods summarize the sūtra in this
-                        manner (chap. 1):</p>
+                        manner (chap. 1, <ptr target="#UT22084-046-001-42"/>):</p>
                     <q>
                         <p tid="9"> “Blessed One, there is an extensive collection of discourses on the Dharma that
                             bears the name <title xml:lang="Sa-Ltn">Lalitavistara</title> (<title xml:lang="en">The Play
@@ -408,7 +411,7 @@
                         teaching is given (chap. 24). Setting up an important example for the tradition, the Buddha
                         eventually consents to teach the Dharma only after it has been requested four times, in this
                         case by all the gods, headed by Brahmā and Śakra. As he says, “O Brahmā, the gates of nectar are
-                        opened” (chap. 25).</p>
+                        opened” (chap. 25, <ptr target="#UT22084-046-001-2053"/>).</p>
                     <milestone unit="chunk" xml:id="UT22084-046-001-12"/>
                     <p tid="19">At this point, the Buddha determines through his higher knowledge that the first people
                         to hear his teaching should be his five former companions from the days when he was practicing
@@ -25823,7 +25826,7 @@
                                 Indian tradition he is the deity of water and the underworld. The Tibetan does not
                                 attempt to translate his name but instead has “god of water.” The Sanskrit name has
                                 ancient pre-Sanskrit origins, and, as he was originally the god of the sky, is related
-                                to the root <term xml:lang="Sa-Ltn">vṛ</term>, meaning “enveloping” or “covering.” He
+                                to the root <foreign type="term" xml:lang="Sa-Ltn">vṛ</foreign>, meaning “enveloping” or “covering.” He
                                 has the same ancient origins as the ancient Greek sky deity Uranus and the Zoroastrian
                                 supreme deity Mazda.</p>
                             </note>
