--- a/translations/kangyur/placeholders/033-001_toh12-the_perfection_of_wisdom_in_eight_thousand_lines.xml
+++ b/translations/kangyur/placeholders/033-001_toh12-the_perfection_of_wisdom_in_eight_thousand_lines.xml
@@ -17,12 +17,12 @@
                 <sponsor xml:id="UT22084-033-001-4">般若八千頌譯經護持小組</sponsor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.9 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-033-001"/>
                 <date/>
             </publicationStmt>
@@ -65,6 +65,12 @@
                 </change>
                 <change who="#line-tofte" when="2023-10-03T13:22:57.747Z" type="text-version" status="0.0.8" xml:id="UT22084-033-001-17">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T07:15:19.405Z" type="translation-status" status="2.e" xml:id="UT22084-033-001-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T07:15:19.405Z" type="text-version" status="0.0.9" xml:id="UT22084-033-001-19">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
