--- a/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
+++ b/translations/kangyur/placeholders/088-027_toh533,860-the_incantation_the_essence_of_sakyamuni.xml
@@ -12,13 +12,14 @@
                 <author role="translatorEng" xml:id="UT22084-088-027-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-088-027-14">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-088-027-23">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-088-027-33">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-088-027"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +100,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-04T10:17:13.211Z" type="text-version" status="0.0.12" xml:id="UT22084-088-027-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:28:00.682Z" type="text-version" status="0.0.13" xml:id="UT22084-088-027-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T08:30:37.873Z" type="translation-status" status="2.b" xml:id="UT22084-088-027-35">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T08:30:37.873Z" type="text-version" status="0.0.14" xml:id="UT22084-088-027-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
