--- a/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
+++ b/translations/kangyur/placeholders/088-028_toh534,861-the_incantation_the_essence_of_vairocana.xml
@@ -12,13 +12,14 @@
                 <author role="translatorEng" xml:id="UT22084-088-028-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-088-028-14">Rory Lindsay</editor>
                 <editor role="copyEditor" xml:id="UT22084-088-028-23">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-088-028-33">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-088-028"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +100,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-04T10:19:46.119Z" type="text-version" status="0.0.12" xml:id="UT22084-088-028-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:28:58.248Z" type="text-version" status="0.0.13" xml:id="UT22084-088-028-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T08:33:32.376Z" type="translation-status" status="2.b" xml:id="UT22084-088-028-35">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T08:33:32.376Z" type="text-version" status="0.0.14" xml:id="UT22084-088-028-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
