--- a/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
+++ b/translations/kangyur/placeholders/088-029_toh535,868-recollecting_the_names_of_candraprabha.xml
@@ -12,13 +12,14 @@
                 <author role="translatorEng" xml:id="UT22084-088-029-2">Bruno Galasek-Hul</author>
                 <editor role="projectEditor" xml:id="UT22084-088-029-14">Nathaniel Rich</editor>
                 <editor role="copyEditor" xml:id="UT22084-088-029-23">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-088-029-33">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.12 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.b"/>
                 <idno xml:id="UT22084-088-029"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +100,15 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-04T10:22:00.203Z" type="text-version" status="0.0.12" xml:id="UT22084-088-029-28">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T12:29:38.665Z" type="text-version" status="0.0.13" xml:id="UT22084-088-029-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T08:36:39.352Z" type="translation-status" status="2.b" xml:id="UT22084-088-029-35">
+                    <desc>2.b</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T08:36:39.352Z" type="text-version" status="0.0.14" xml:id="UT22084-088-029-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
