--- a/translations/kangyur/placeholders/083-008_toh460a,952-the_incantation_for_seeing_vajrapani_in_dream.xml
+++ b/translations/kangyur/placeholders/083-008_toh460a,952-the_incantation_for_seeing_vajrapani_in_dream.xml
@@ -19,11 +19,11 @@
                 <editor role="projectEditor" xml:id="UT22084-083-008-14">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-083-008"/>
             </publicationStmt>
             <sourceDesc>
@@ -83,6 +83,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-07T14:04:49.458Z" type="text-version" status="0.0.7" xml:id="UT22084-083-008-17">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T13:51:26.717Z" type="translation-status" status="2.e" xml:id="UT22084-083-008-18">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T13:51:26.717Z" type="text-version" status="0.0.8" xml:id="UT22084-083-008-19">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
