--- a/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
+++ b/translations/kangyur/placeholders/083-020_toh472-the_ritual_practices_of_the_muskrat.xml
@@ -14,11 +14,11 @@
                 <editor role="projectEditor" xml:id="UT22084-083-020-13">Ryan Damron</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.f"/>
+                <availability status="2.e"/>
                 <idno xml:id="UT22084-083-020"/>
                 <date/>
             </publicationStmt>
@@ -66,6 +66,12 @@
                     <desc>2.f</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-07T14:20:15.829Z" type="text-version" status="0.0.7" xml:id="UT22084-083-020-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T13:55:01.625Z" type="translation-status" status="2.e" xml:id="UT22084-083-020-17">
+                    <desc>2.e</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T13:55:01.625Z" type="text-version" status="0.0.8" xml:id="UT22084-083-020-18">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
