--- a/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
+++ b/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
@@ -15,14 +15,15 @@
                 <editor role="reviser" xml:id="UT22084-091-069-4">Ryan Conlon</editor>
                 <consultant role="dharmaMaster" xml:id="UT22084-091-069-5">Chokyi Nyima Rinpoche</consultant>
                 <editor role="projectEditor" xml:id="UT22084-091-069-20">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-091-069-31">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.8 <date>2024</date>
+                <edition>v 0.1.10 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.c"/>
                 <idno xml:id="UT22084-091-069"/>
                 <date/>
             </publicationStmt>
@@ -85,6 +86,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-12T10:10:48.007Z" type="text-version" status="0.1.8" xml:id="UT22084-091-069-24">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-12T10:11:25.326Z" type="text-version" status="0.1.9" xml:id="UT22084-091-069-32">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T14:30:36.978Z" type="translation-status" status="2.c" xml:id="UT22084-091-069-33">
+                    <desc>2.c</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-12T14:30:36.978Z" type="text-version" status="0.1.10" xml:id="UT22084-091-069-34">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
