--- a/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
+++ b/translations/kangyur/placeholders/061-008_toh188-the_sutra_of_the_prophecy_by_dipamkara.xml
@@ -19,12 +19,12 @@
                 <editor role="copyEditor" xml:id="UT22084-061-008-34">Konchog Norbu</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.13 <date>2024</date>
+                <edition>v 0.0.14 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.b"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-061-008"/>
                 <date/>
             </publicationStmt>
@@ -99,6 +99,12 @@
                     <desc>2.b</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-07T14:58:14.704Z" type="text-version" status="0.0.13" xml:id="UT22084-061-008-41">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-13T14:28:04.725Z" type="translation-status" status="2.a" xml:id="UT22084-061-008-42">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-13T14:28:04.725Z" type="text-version" status="0.0.14" xml:id="UT22084-061-008-43">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
