file name changes

--- a/translations/kangyur/translations/087-010_toh505-the_vaiduryaprabha_dharani.xml
+++ b/translations/kangyur/translations/087-010_toh505-the_vaiduryaprabha_dharani.xml
@@ -4,43 +4,37 @@
         <teiHeader>
                 <fileDesc>
                         <titleStmt>
-                                <title type="mainTitle" xml:lang="Bo-Ltn">bai DUr+ya’i ’od gyi
-                                        gzungs</title>
-                                <title type="mainTitle" xml:lang="bo">བཻ་ཌཱུརྱའི་འོད་གྱི་གཟུངས།</title>
-                                <title type="mainTitle" xml:lang="en">The Vaiḍūryaprabha
+                <title type="mainTitle" xml:lang="en">The Vaiḍūryaprabha
                                         Dhāraṇī</title>
-                                <title type="mainTitle" xml:lang="Sa-Ltn">Vaiḍūrya­prabha­dharaṇī</title>
-                                <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་ཏིང་ངེ་འཛིན་གྱི་སྟོབས་བསྐྱེད་པ་བཻ་ཌཱུརྱའི་འོད་ཅེས་བྱ་བའི་གཟུངས།</title>
-                                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs
-                                        pa’i ting nge ’dzin gyi stobs bskyed pa bai DUr+ya’i ’od ces
-                                        bya ba’i gzungs</title>
-                                <title type="longTitle" xml:lang="en">The Noble Dhāraṇī Called
+                <title type="mainTitle" xml:lang="Sa-Ltn">Vaiḍūrya­prabha­dharaṇī</title>
+                <title type="mainTitle" xml:lang="bo">བཻ་ཌཱུརྱའི་འོད་གྱི་གཟུངས།</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">bai DUr+ya’i ’od gyi
+                                        gzungs</title>
+                <title type="longTitle" xml:lang="en">The Noble Dhāraṇī Called
                                         Vaiḍūryaprabha that Activates the Power of the Thus-Gone
                                         Ones’ Absorption.</title>
-                                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­tathāgata­vaiḍūrya­prabha­nāma­baladhana­samādhi­dhāraṇī</title>
-                                <title type="otherTitle" xml:lang="zh"/>
-                                <title type="otherTitle" xml:lang="en">Pulverizing and Purifying all
-                                        Karmic Obscurations (las kyi sgrib pa thams cad rnam par
-                                        ’thag cing sbyong ba)</title>
-                                <title type="otherTitle" xml:lang="en">Displaying the Emanations of
+                <title type="longTitle" xml:lang="Sa-Ltn">Ārya­tathāgata­vaiḍūrya­prabha­nāma­baladhana­samādhi­dhāraṇī</title>
+                <title type="longTitle" xml:lang="bo">འཕགས་པ་དེ་བཞིན་གཤེགས་པའི་ཏིང་ངེ་འཛིན་གྱི་སྟོབས་བསྐྱེད་པ་བཻ་ཌཱུརྱའི་འོད་ཅེས་བྱ་བའི་གཟུངས།</title>
+                <title type="longTitle" xml:lang="Bo-Ltn">’phags pa de bzhin gshegs
+                                        pa’i ting nge ’dzin gyi stobs bskyed pa bai DUr+ya’i ’od ces
+                                        bya ba’i gzungs</title>
+                <title type="otherTitle" xml:lang="en">Displaying the Emanations of
                                         the Seven Thus-Gone Ones (de bzhin gshegs pab bdun gyi rnam
                                         par ’phrul pa bstan pa)</title>
-                                <author role="translatorMain" xml:id="UT22084-087-010-1"><!--84000 Associate Translators--></author>
-                                <author role="translatorEng" xml:id="UT22084-087-010-2">Adam
-                                        Krug</author>
-                                <editor role="projectEditor" xml:id="UT22084-087-010-20">Ryan
-                                        Damron</editor>
-                                <editor role="copyEditor" xml:id="UT22084-087-010-29">Dawn
-                                        Collins</editor>
-                                <editor role="projectEditor" xml:id="UT22084-087-010-39">George
-                                        FitzHerbert</editor>
-                                <editor role="TEImarkupEditor" xml:id="UT22084-087-010-50">Martina
-                                        Cotter</editor>
-                                <sponsor xml:id="UT22084-087-010-3">May, George, Likai and Lillian
+                <title type="otherTitle" xml:lang="en">Pulverizing and Purifying all
+                                        Karmic Obscurations (las kyi sgrib pa thams cad rnam par
+                                        ’thag cing sbyong ba)</title>
+                <author role="translatorMain" xml:id="UT22084-087-010-1"><!--84000 Associate Translators--></author>
+                <author role="translatorEng" xml:id="UT22084-087-010-2">Adam C. Krug</author>
+                <editor role="projectEditor" xml:id="UT22084-087-010-20">Ryan Damron</editor>
+                <editor role="copyEditor" xml:id="UT22084-087-010-29">Dawn Collins</editor>
+                <editor role="projectEditor" xml:id="UT22084-087-010-39">George FitzHerbert</editor>
+                <editor role="TEImarkupEditor" xml:id="UT22084-087-010-50">Martina Cotter</editor>
+                <sponsor xml:id="UT22084-087-010-3">May, George, Likai and Lillian
                                         Gu</sponsor>
-                        </titleStmt>
+            </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.2 <date>2024</date>
+                <edition>v 0.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -72,6 +66,12 @@
                                         <ref>Toh 505</ref>
                                         <biblScope>Degé Kangyur, vol. 87 (rgyud ’bum, da), folios
                                                 284.a–286.a</biblScope>
+                                        <author role="translatorTib" xml:id="UT22084-087-010-214">Jinamitra</author>
+                                        <author role="translatorTib" xml:id="UT22084-087-010-215">Dānaśīla</author>
+                                        <author role="translatorTib" xml:id="UT22084-087-010-216">Śīlendrabodhi</author>
+                                        <author role="translatorTib" xml:id="UT22084-087-010-217">Bandé Yeshé Dé</author>
+                                        <author role="translatorTib" xml:id="UT22084-087-010-218">Dīpaṅkaraśrījñāna</author>
+                                        <author role="translatorTib" xml:id="UT22084-087-010-219">Tsültrim Gyalwa</author>
                                         <location work="UT4CZ5369" count-pages="5">
                                                 <volume number="87" start-page="567" end-page="571"/>
                                         </location>
@@ -177,13 +177,13 @@
                 <change who="#line-tofte" when="2024-04-23T12:12:11.736Z" type="text-version" status="0.0.2" xml:id="UT22084-087-010-212">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
+                <change who="#line-tofte" when="2024-04-23T12:38:22.137Z" type="text-version" status="0.0.3" xml:id="UT22084-087-010-213">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
         <text>
-                <!--Note the "Contents" outline from the Word DOCX has not been included in the script. If the 
-                    Outline to the text is quite complex, it is recommended that you paste the outlined contents from the DOCX here as a comment for
-                    markup's reference. The actual table of contents will be generated in the Reading Room by the parser.-->
                 <front>
                         <div type="summary">
                                 <head type="summary" tid="1">Summary</head>
@@ -243,7 +243,7 @@
                         <note place="end" xml:id="UT22084-087-010-58">
                                                   <title xml:lang="en">The Detailed Account of the
                                                   Previous Aspirations of the Seven Thus-Gone Ones
-                                                  </title>(<title xml:lang="Sa-Ltn">Saptatathāga­tapūrvapraṇi­dhānaviśeṣavistāra</title>.
+                                                  </title>(<title xml:lang="Sa-Ltn">Saptatathāgata­pūrvapraṇi­dhānaviśeṣavistāra</title>.
                                                           Toh 503), <ptr target="#UT22084-087-008-466"/><!--1.113-->.</note> and <title xml:lang="en">The
                                                   Detailed Account of the Previous Aspirations of
                                                   the Blessed
@@ -533,7 +533,7 @@
                                                   buddhe buddhottame ume kume
                                                   buddha­kṣetra­pariśodhani dhameni dhame
                                                   meru meru meruśikhare sarvākālamṛtyuni­vāraṇi
-                                                  buddhe subuddhe buddhādhiṣṭhānā­dhiṣṭhitena
+                                                  buddhe subuddhe buddhādhiṣṭhānādhiṣṭhitena
                                                   rakṣantu me sarvadeva same asame samanvāharantu me
                                                   sarva­buddha­bodhisattvā śame śame
                                                   praśamantu me sarvetyupadrāvavyādhayaḥ pūrāṇī
@@ -585,7 +585,7 @@
                                                 will think of them. Brahmā, Śakra, the Four Great
                                                 Kings, and the great nāga lay practitioners will
                                                 protect them, and they will be guarded by all the
-                                                vajra-wielding yakṣa generals. All of their karmic
+                                                <term rend="ignore">vajra</term>-wielding yakṣa generals. All of their karmic
                                                 obscurations will be purified, including the five
                                                 acts with immediate retribution and so forth. They
                                                 will not contract any illnesses, will have a long
@@ -731,8 +731,8 @@
                                                 the Words of the Buddha. 2021.</bibl>
                                         <bibl xml:id="UT22084-087-010-138">84000. <title xml:lang="en">
                             <ref target="https://read.84000.co/translation/toh503.html">The Detailed Account of the Previous Aspirations
-                                                  of the Seven Thus-Gone Ones </ref>
-                        </title>(<title xml:lang="Sa-Ltn">Ārya­saptatathāga­tapūrvapraṇi­dhānaviśeṣavistāra­nāma
+                                                of the Seven Thus-Gone Ones </ref>
+                        </title>(<title xml:lang="Sa-Ltn">Ārya­saptatathāgata­pūrvapraṇi­dhānaviśeṣavistāra­nāma
                                                   mahāyānasūtra</title>, Toh 503). Translated by the
                                                 Dharmachakra Translation Committee. Online
                                                 publication. 84000: Translating the Words of the
@@ -962,7 +962,8 @@
                                                   <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">bhaiṣajya­guru­vaiḍūrya­prabha­rāja</term>
                                                   <note type="definition">
                                 <p>One of the Seven
-                                                          Thus-Gone Ones, often referred to as the Medicine Buddha</p>
+                                                          thus-gone ones, often referred to as the Medicine Buddha. Also called
+                                                          Bhaiṣajya­guru­vaiḍūrya­prabha.</p>
                             </note>
                                                 </gloss>
                     </item>
@@ -1223,7 +1224,7 @@
                                                   mentioned in <title xml:lang="en">The Dhāraṇī of
                                                   Vaiḍūryaprabha</title>. This most likely refers to
                                                   the unique group of twelve yakṣa generals who
-                                                  pledge themselves in service of the thus-gone one
+                                                  pledge themselves in service of the Thus-Gone One
                                                   Bhaiṣajya­guru in <title xml:lang="en">The Detailed
                                                   Account of the Previous Aspirations of the Blessed
                                                   Bhaṣajyaguruvaiḍūryaprabha</title> (Toh
@@ -1428,7 +1429,8 @@
                                                         <term xml:lang="bo" type="attestedSource" n="1">སྨན་གྱི་ལྷ་བཻ་ཌཱུརྱའི་འོད།</term>
                                                         <note type="definition">
                                                                 <p>The Medicine Buddha, the thus-gone one residing in the buddhafield
-                                                                        Vaiḍūryanirbhāsa. </p>
+                                                                        Vaiḍūryanirbhāsa. Also called
+                                                                        Bhaiṣajya­guru­vaiḍūrya­prabha­rāja.</p>
                                                         </note>
                                                 </gloss>
                                         </item>
