--- a/translations/kangyur/translations/091-010_toh613,989-the_dharani_of_the_goddess_cunda.xml
+++ b/translations/kangyur/translations/091-010_toh613,989-the_dharani_of_the_goddess_cunda.xml
@@ -501,12 +501,12 @@
               zhes bya ba’i gzungs</title>. Stok Palace Kangyur vol. 104 (mdo sde, ta), folios
             391.b–392.b.</bibl>
           <bibl xml:id="UT22084-091-010-146">84000. <title xml:lang="en">
-            <ref target="https://read.84000.co/translation/toh?381.html">Emergence from
+            <ref target="https://read.84000.co/translation/toh381.html">Emergence from
               Sampuṭa</ref>
           </title> (<title xml:lang="Sa-Ltn">Sampuṭodbhava</title>, <title xml:lang="Bo-Ltn">yang dag par sbyor ba</title>, Toh 381).
             Translated by Dharmachakra Translation Committee. Online publication, 84000: Translating the Words of the Buddha, 2020.</bibl>
           <bibl xml:id="UT22084-091-010-147">84000. <title xml:lang="en">
-            <ref target="https://read.84000.co/translation/toh?.html">The Basket’s Display</ref>
+            <ref target="https://read.84000.co/translation/toh116.html">The Basket’s Display</ref>
           </title> (<title xml:lang="Sa-Ltn">Kāraṇḍavyūha</title>, <title xml:lang="Bo-Ltn">za ma tog bkod pa</title>, Toh 116).
             Translated by Peter Alan Roberts with Tulku Yeshi. Online publication, 84000: Translating the Words of the Buddha, 2013.</bibl>
           <bibl xml:id="UT22084-091-010-107">Bhattacharyya, Benoytosh, ed. <title xml:lang="Sa-Ltn">Sādhanamālā</title>. 2 vols. Gaekwad’s Oriental Series 26. Baroda: Central Library,
@@ -562,7 +562,7 @@
         <list type="glossary">
           <item>
                         <gloss type="term" xml:id="UT22084-091-010-124">
-              <term type="translationMain">the Three Jewels</term>
+              <term type="translationMain">Three Jewels</term>
               <term status="verified" xml:lang="Bo-Ltn" n="1">dkon mchog gsum </term>
                             <term xml:lang="bo" n="1">དཀོན་མཆོག་གསུམ།</term>
               <term type="attestedDictionary" xml:lang="Sa-Ltn">triratna</term>
