--- a/translations/kangyur/translations/091-040_toh643,890-the_dharani_of_maitreyas_pledge.xml
+++ b/translations/kangyur/translations/091-040_toh643,890-the_dharani_of_maitreyas_pledge.xml
@@ -202,7 +202,7 @@
                                 translation.</p>
                             <!--THE FOLLOWING ONLY NEEDED FOR TEXTS WITH MULTIPLE TOH VERSIONS OTHERWISE OMIT AND REMOVE THE <p> ELEMENT-->
                             <p key="toh643">Note that there is a discrepancy among various databases for cataloging the Toh 890 version
-                                of this text within vol. 100 or 101 of the Degé Kangyur. See Toh 890, <ref target="https://read.84000.co/translation/toh890.html#end-note-UT22084-091-040-114">note 1</ref>, for details.</p>
+                                of this text within vol. 100 or 101 of the Degé Kangyur. See Toh 890, <ptr target="890.html#UT22084-091-040-114"/>, for details.</p>
                             <!--REPLICATE PREVIOUS NOTE IF THERE ARE THREE OR MORE TOH VERSIONS-->
                         </note> that center on Maitreya, the bodhisattva who will,
                         as alluded to in this text, awaken as the next buddha in our world. This
