--- a/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
+++ b/translations/kangyur/placeholders/091-069_toh672,1088-the_hundred_and_eight_names_of_the_goddess_kali.xml
@@ -18,12 +18,12 @@
                 <editor role="copyEditor" xml:id="UT22084-091-069-31">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.1.10 <date>2024</date>
+                <edition>v 0.1.11 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.c"/>
+                <availability status="2.a"/>
                 <idno xml:id="UT22084-091-069"/>
                 <date/>
             </publicationStmt>
@@ -95,6 +95,12 @@
                     <desc>2.c</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-12T14:30:36.978Z" type="text-version" status="0.1.10" xml:id="UT22084-091-069-34">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T12:34:20.103Z" type="translation-status" status="2.a" xml:id="UT22084-091-069-35">
+                    <desc>2.a</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T12:34:20.103Z" type="text-version" status="0.1.11" xml:id="UT22084-091-069-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
