--- a/translations/kangyur/placeholders/098-001_toh831-the_sutra_of_allgathering_awareness.xml
+++ b/translations/kangyur/placeholders/098-001_toh831-the_sutra_of_allgathering_awareness.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-098-001-2">Dylan Esler</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2023</date>
+                <edition>v 0.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="3"/>
+                <availability status="2.h"/>
                 <idno xml:id="UT22084-098-001"/>
                 <date/>
             </publicationStmt>
@@ -53,6 +53,12 @@
                 </change>
                 <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.6" xml:id="UT22084-098-001-8">
                     <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T13:55:27.032Z" type="translation-status" status="2.h" xml:id="UT22084-098-001-9">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T13:55:27.032Z" type="text-version" status="0.0.7" xml:id="UT22084-098-001-10">
+                    <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
