--- a/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
+++ b/translations/kangyur/placeholders/096-013_toh764,970-the_incantation_of_manibhadra.xml
@@ -15,11 +15,11 @@
                 <author role="translatorEng" xml:id="UT22084-096-013-4">Péter-Dániel Szántó</author>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.7 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
-                <availability status="2.h"/>
+                <availability status="2.g"/>
                 <idno xml:id="UT22084-096-013"/>
                 <date/>
             </publicationStmt>
@@ -73,6 +73,12 @@
                     <desc>2.h</desc>
                 </change>
                 <change who="#line-tofte" when="2024-08-07T14:42:59.683Z" type="text-version" status="0.0.7" xml:id="UT22084-096-013-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T14:38:47.427Z" type="translation-status" status="2.g" xml:id="UT22084-096-013-15">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T14:38:47.427Z" type="text-version" status="0.0.8" xml:id="UT22084-096-013-16">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
