--- a/translations/kangyur/placeholders/001-005_toh1-5-chapter_5_on_leather.xml
+++ b/translations/kangyur/placeholders/001-005_toh1-5-chapter_5_on_leather.xml
@@ -7,20 +7,21 @@
                 <title type="mainTitle" xml:lang="en">Chapter 5: On Leather</title>
                 <title type="mainTitle" xml:lang="Sa-Ltn">Carmavastu</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">ko lpags kyi gzhi/</title>
-                <author role="translatorMain" xml:id="UT22084-001-005-1"/>
+                <author role="translatorMain" xml:id="UT22084-001-005-1">Lochung Translation Committee</author>
                 <consultant role="projectManager" xml:id="UT22084-001-005-2">Cuilan Liu</consultant>
                 <author role="translatorEng" xml:id="UT22084-001-005-3">Cuilan Liu</author>
                 <author role="translatorEng" xml:id="UT22084-001-005-4">Susan Roach</author>
                 <author role="translatorEng" xml:id="UT22084-001-005-5">Andy Francis</author>
                 <author role="translatorEng" xml:id="UT22084-001-005-6">Jamyang Rinchen</author>
+                <editor role="projectEditor" xml:id="UT22084-001-005-21">Robert Miller</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.6 <date>2024</date>
+                <edition>v 0.0.8 <date>2024</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.g"/>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-001-005"/>
                 <date/>
             </publicationStmt>
@@ -59,6 +60,15 @@
                     <desc>2.g</desc>
                 </change>
                 <change who="#line-tofte" when="2024-07-01T14:09:28.352Z" type="text-version" status="0.0.6" xml:id="UT22084-001-005-14">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-07-01T14:10:16.351Z" type="text-version" status="0.0.7" xml:id="UT22084-001-005-22">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T14:51:56.191Z" type="translation-status" status="2.f" xml:id="UT22084-001-005-23">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T14:51:56.191Z" type="text-version" status="0.0.8" xml:id="UT22084-001-005-24">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
