--- a/translations/kangyur/translations/043-013_toh76-asokadattas_prophecy.xml
+++ b/translations/kangyur/translations/043-013_toh76-asokadattas_prophecy.xml
@@ -30,9 +30,10 @@
                 <editor role="copyEditor" xml:id="UT22084-043-013-24">Laura Goetz</editor>
                 <editor role="projectEditor" xml:id="UT22084-043-013-36">David Fiordalis</editor>
                 <editor role="TEImarkupEditor" xml:id="UT22084-043-013-49">Martina Cotter</editor>
+                <editor role="finalReviewer" xml:id="UT22084-043-013-529">Andreas Doctor</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 0.0.4 <date>2024</date>
+                <edition>v 0.0.6 <date>2024</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -159,6 +160,12 @@
                 </change>
                 <change who="#line-tofte" when="2024-07-02T12:32:45.485Z" type="text-version" status="0.0.4" xml:id="UT22084-043-013-520">
                     <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2024-08-20T08:39:36.458Z" type="text-version" status="0.0.5" xml:id="UT22084-043-013-530">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#john" when="2024-08-20T15:12:14.424Z" type="text-version" status="0.0.6" xml:id="UT22084-043-013-3322">
+                    <desc>Modified a term and glossary entry for vimuktijñānadarśana and added glossary entry for five undefiled aggregates.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -731,15 +738,20 @@
                                                 stability, and wisdom, still, father, where is their
                                                 moral discipline? Where is their meditative
                                                 stability? Where is their wisdom? Where is their
-                                                liberation? Where is their knowledge and vision of
-                                                liberation? As an analogy, father, they are like
+                                                liberation? Where is their seeing of the wisdom of
+                                                liberation?<note place="end" xml:id="UT22084-043-013-1101">The five qualities mentioned
+                                                        here—moral discipline,
+                                                        meditative stability, wisdom, liberation, and
+                                                        seeing of the knowledge of liberation—are the five
+                                                undefiled aggregates that characterize bodhisattvas, 
+                                                contrasted with the five defiled aggregates of ordinary sentient beings.</note> As an analogy, father, they are like
                                                 pots already filled with water that cannot accept or
                                                 retain a single drop more when it rains. In the same
                                                 way, father, even when a hundred thousand buddhas
                                                 teach śrāvakas the Dharma they cannot grasp it. They
                                                 neither retain nor increase their moral discipline,
                                                 meditative stability, wisdom, liberation, or
-                                                knowledge and vision of liberation. </p>
+                                                seeing of the knowledge of liberation. </p>
                                         <milestone unit="chunk" xml:id="UT22084-043-013-112"/>
                                         <p tid="57">“On the other hand, father, by the same analogy,
                                                 the vast ocean catches and retains the water of all
@@ -2243,17 +2255,31 @@
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-043-013-332">
-                                                  <term type="translationMain">knowledge and vision
-                                                  of liberation</term>
-                                                  <term status="verified" xml:lang="Bo-Ltn" n="1">rnam par grol ba’i ye shes mthong ba </term>
+                                                  <term type="translationMain">seeing the knowledge of liberation</term>
+                                                <term type="translationAlternative">seeing of the knowledge of liberation</term>
+                                                <term status="verified" xml:lang="Bo-Ltn" n="1">rnam par grol ba’i ye shes mthong ba </term>
                                                   <term xml:lang="bo" n="1">རྣམ་པར་གྲོལ་བའི་ཡེ་ཤེས་མཐོང་བ།</term>
                                                   <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">vimukti­jñāna­darśana</term>
                                                   <note type="definition">
-                                <p>To know and see like a
-                                                  buddha. The awakened state as expressed through
-                                                  the metaphor of knowing and seeing.</p>
+                                <p>Direct access to liberated knowing; the fifth of the five undefiled 
+                                                          aggregates that are characteristic of bodhisattvas.</p>
                             </note>
                                                 </gloss>
+                    </item>
+                                        <item>
+                        <gloss type="term" xml:id="UT22084-043-013-3321">
+                                                <term type="translationMain">five undefiled aggregates</term>
+                                                <term status="verified" xml:lang="Bo-Ltn" n="1">zag med kyi phung po lnga </term>
+                                                <term xml:lang="bo" n="1">ཟག་མེད་ཀྱི་ཕུང་པོ་ལྔ།</term>
+                                                <term status="verified" xml:lang="Sa-Ltn" type="attestedOther">pañca anāsravaskandha</term>
+                                                <note type="definition">
+                                <p>Also known as the five aggregates beyond the world 
+                                                        (<foreign xml:lang="Sa-Ltn">lokottaraskandha</foreign>, 
+                                                        <foreign xml:lang="Bo-Ltn">’jig rten las ’das pa’i phung po lnga</foreign>). 
+                                                        They consist of the aggregate of moral discipline, the aggregate of meditative stability, 
+                                                        the aggregate of wisdom, the aggregate of liberation, and the aggregate of seeing the knowledge of liberation.</p>
+                            </note>
+                                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-043-013-333">
