--- a/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
+++ b/translations/kangyur/translations/072-021_toh321-the_verses_on_circumambulating_shrines.xml
@@ -21,13 +21,13 @@
         <editor role="finalReviewer" xml:id="UT22084-072-021-300">Andreas Doctor</editor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.0.6 <date>2024</date>
+                <edition>v 1.0.7 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
         <publisher>
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit initiative to translate all the Buddha’s words into modern languages, and to make them available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND (Attribution - Non-commercial - No-derivatives) 3.0 copyright. It may be copied or printed for fair use, but only with full
@@ -170,6 +170,12 @@
                 </change>
                 <change who="#john" when="2024-07-20T16:19:37.492Z" type="text-version" status="1.0.6" xml:id="UT22084-072-021-1235">
                     <desc>Typo corrected.</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T05:57:05.079Z" type="translation-status" status="1" xml:id="UT22084-072-021-1236">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T05:57:05.079Z" type="text-version" status="1.0.7" xml:id="UT22084-072-021-1237">
+                    <desc>Included in App v 3.17</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
