--- a/translations/kangyur/translations/072-022_toh322-verses_for_prasenajit.xml
+++ b/translations/kangyur/translations/072-022_toh322-verses_for_prasenajit.xml
@@ -19,7 +19,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-022-241">Andreas Doctor</editor>
             </titleStmt>
       <editionStmt>
-                <edition>v 1.0.2 <date>2024</date>
+                <edition>v 1.0.3 <date>2024</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -27,7 +27,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global non-profit
           initiative to translate all the Buddha’s words into modern languages, and to make them
           available to everyone. </publisher>
-        <availability status="1.a">
+        <availability status="1">
           <licence>
             <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
             <p>This work is provided under the protection of a Creative Commons CC BY-NC-ND
@@ -152,6 +152,12 @@
                 </change>
                 <change who="#andre" when="2024-07-11T15:23:00.032Z" type="text-version" status="1.0.2" xml:id="UT22084-072-022-252">
                     <desc>Glossary integration revised, activated in CG</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T06:26:39.748Z" type="translation-status" status="1" xml:id="UT22084-072-022-253">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2024-08-21T06:26:39.748Z" type="text-version" status="1.0.3" xml:id="UT22084-072-022-254">
+                    <desc>Included in App v 3.17</desc>
                 </change>
       </revisionDesc>
     </fileDesc>
